    `#replaceAll(operator)`. These methods update the original DOM, as well as the Elements list.
    <https://github.com/jhy/jsoup/pull/2017>

  * Improvement: added the NodeIterator class, to efficiently traverse a node tree using the Iterator interface. And
    added Stream Element#stream() and Node#nodeStream() methods, to enable fluent composable stream pipelines of node
    traversals.

  * Improvement: when changing the OutputSettings syntax to XML, the xhtml EscapeMode is automatically set by default.

  * Improvement: added the `:is(selector list)` pseudo-selector, which finds elements that match any of the selectors in
    the selector list. Useful for making large ORed selectors more readable.

  * Improvement: repackaged the library with native (vs automatic) JPMS module support.
    <https://github.com/jhy/jsoup/pull/2025>

  * Bugfix: when outputting with XML syntax, HTML elements that were parsed as data nodes (<script> and <style>) should
    be emitted as CDATA nodes, so that they can be parsed correctly by an XML parser.
    <https://github.com/jhy/jsoup/pull/1720>

  * Bugfix: the Immediate Parent selector `>` could match elements above the root context element, causing incorrect
    elements to be returned when used on elements other than the root document.
    <https://github.com/jhy/jsoup/issues/2018>

  * Bugfix: in a sub-query such as `p:has(> span, > i)`, combinators following the `,` Or combinator would be
    incorrectly skipped, such that the sub-query was parsed as `i` instead of `> i`.
    <https://github.com/jhy/jsoup/issues/1707>

  * Bugfix: in W3CDom, if the jsoup input document contained an empty doctype, the conversion would fail with a
    DOMException. Now, said doctype is discarded, and the conversion continues.

  * Build Improvement: added a local test proxy implementation, for proxy integration tests.
    <https://github.com/jhy/jsoup/pull/2029>
